crates/eml_cli/tests/snapshots/integration__ui__run@runtime__concat_copies_shared_strings.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/runtime/concat_copies_shared_strings.em
---
--- stdout ---
xy
xyz
xyzxyz
lit
lit!
--- stderr ---
