crates/eml_cli/tests/snapshots/integration__ui__run@runtime__deep_recursion.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/runtime/deep_recursion.em
---
--- stdout ---
100000
--- stderr ---
