crates/eml_cli/tests/snapshots/integration__ui__run@runtime__join_points.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/runtime/join_points.em
---
--- stdout ---
a!?a
plain?b
cc
then
kept
--- stderr ---
