crates/eml_cli/tests/snapshots/integration__ui__run@runtime__shared_types_occurs_check.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/runtime/shared_types_occurs_check.em
---
--- stdout ---
5
--- stderr ---
