crates/eml_cli/tests/snapshots/integration__ui__run@runtime__strings_freed_in_branches.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/runtime/strings_freed_in_branches.em
---
--- stdout ---
xyxy
1
aa
noneb
Hello, eml!
eml
--- stderr ---
